--- a/src/System.Web.Helpers/System.Web.Helpers.csproj
+++ b/src/System.Web.Helpers/System.Web.Helpers.csproj
@@ -12,6 +12,9 @@
     <DefineConstants>$(DefineConstants);ASPNETWEBPAGES</DefineConstants>
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <NoWarn>1591,1709</NoWarn>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -46,6 +49,7 @@
     <Compile Include="Json.cs" />
     <Compile Include="ObjectInfo.cs" />
     <Compile Include="ObjectVisitor.cs" />
+    <Compile Include="PassowrdCrypto.cs" />
     <Compile Include="WebCache.cs" />
     <Compile Include="ServerInfo.cs" />
     <Compile Include="Resources\HelpersResources.Designer.cs">
